--- a/Syllabus_4676.tex
+++ b/Syllabus_4676.tex
@@ -80,7 +80,7 @@
 	ECON 4676 \\
 	%\vspace{0.2cm}
 	Ignacio Sarmiento-Barbieri \\
-	\textbf{2021-1} \\
+	\textbf{2021-2} \\
 	
 \end{tabular}
 
@@ -133,7 +133,6 @@
 \end{itemize}
 
 
-
 \subsection*{Cláusula de ajustes razonables}
 
 Si lo considera pertinente, siéntase en libertad de informar al profesor \underline{lo antes posible} {\bf si usted tiene alguna condición, visible o invisible}, por la cual requiera algún ajuste para estar en igualdad de condiciones con los y las demás estudiantes. Debido a las actuales circunstancias, las barreras de conectividad o acceso a los recursos tecnológicos indispensables para la clase son parte de las condiciones que pueden requerir ajustes. Por la misma razón, no necesitará presentar documentación para solicitar esos ajustes. 
@@ -141,6 +140,8 @@ Si lo considera pertinente, siéntase en libertad de informar al profesor \under
 También lo invitamos a buscar asesoría y apoyo en la Coordinación de su programa, en la Decanatura de Estudiantes (\url{http://centrodeconsejeria.uniandes.edu.co}, Bloque Ñf, ext. 2207, 2230 y 4967, horario de atención L-V 8:00 a.m. a 5:00 p.m.) o en el Programa de Acción por la Igualdad y la Inclusión Social (PAIIS) de la Facultad de Derecho (\href{mailto:paiis@uniandes.edu.co}{paiis@uniandes.edu.co}). Si su solicitud se basa en dificultades de acceso a conectividad o tecnología, es particularmente importante que haga este contacto adicional para que pueda acceder a los recursos de apoyo que brinda la Universidad. 
 
 Se entiende por ajustes razonables todas ``las modificaciones y adaptaciones necesarias y adecuadas que no impongan una carga desproporcionada o indebida, cuando se requieran en un caso particular, para garantizar a las personas con discapacidad el goce o ejercicio, en igualdad de condiciones con las demás, de todos los derechos humanos y libertades fundamentales'' Convención sobre los Derechos de las personas con discapacidad, art.2.
+
+Si quiere más información sobre ajustes razonables, puede visitar \href{esta página de la DECA}{https://agora.uniandes.edu.co/que-son-los-ajustes-razonables/}. Y sobre la política de momentos difíciles, \href{esta otra}{https://agora.uniandes.edu.co/sabes-que-es-la-politica-de-momentos-dificiles/}.
 
 
 \subsection*{Cláusula de respeto por la diversidad y contra el acoso}
@@ -153,6 +154,9 @@ La persona que se sienta en alguna de estas situaciones puede denunciar su ocurr
 \item La Ombudsperson (\href{mailto:ombudsperson@uniandes.edu.co}{ombudsperson@uniandes.edu.co}, Edificio RGA–Pedro Navas, Of. 201, ext. 5300 y 3933).
 \item El Comité MAAD (\href{mailto:lineamaad@uniandes.edu.co}{lineamaad@uniandes.edu.co}, \url{https://uniandes.edu.co/MAAD} o a la ext. 2707 o 2230). Si quieren mayor información, guía o necesitan activar el protocolo MAAD pueden acudir a Nancy García (\href{mailto:n.garcia@uniandes.edu.co}{n.garcia@uniandes.edu.co}) en la Facultad. Para mayor información sobre el protocolo MAAD, puede visitar esta página: \url{https://decanaturadeestudiantes.uniandes.edu.co/index.php/es/sobre-la-decanatura/827}
 \item Grupos de apoyo estudiantiles que pueden ofrecerle apoyo y acompañamiento: No Es Normal (\href{mailto:derechoygenero@uniandes.edu.co}{derechoygenero@uniandes.edu.co} o \url{https://www.facebook.com/noesnormaluniandes/?fref=ts}); Pares de Acompañamiento Contra el Acoso-PACA (\href{mailto:paca@uniandes.edu.co}{paca@uniandes.edu.co} o \url{https://www.facebook.com/PACA- 1475960596003814/?fref=ts}).
+\item Para mayor información sobre el protocolo MAAD, puede visitar esta página: \url{https://agora.uniandes.edu.co/wp-content/uploads/2020/09/ruta-maad.pdf}
+
+
 \end{itemize}
 
 
@@ -164,75 +168,13 @@ Es pre-requisito haber cursado Microeconomía 3, Econometría 1 y 2. Se recomien
 
 
 
-\section{Objetivos de la materia}
+\section{Objetivos y competencias del curso}
 
 
 El objetivo de este curso es introducir a los alumnos a un conjunto de herramientas estadísticas, matemáticas, y computacionales para abordar problemas de gran cantidad/tipos/calidad de datos (“large n"), y cantidad de variables (“large p"). Problemas de predicción e inferencia, con especial énfasis en inferencia causal, atravesarán transversalmente al curso. Se buscará también familiarizar a los alumnos con la literatura reciente que utiliza estas herramientas. 
 
 
-
-
-\section{Organización del curso}
-
-
-\begin{longtable}{|l|l|l|}
-\caption{Temario (sujeto a cambios)}\\ \hline
-Semana & Temas de clase                                                                                                                                                                                                                                                                                                                & Actividades                                                                                  \endfirsthead \hline
-1      & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Introducción al curso\\Introducción a Big Data y Big n\\Introducción a R, Python y AWS~~\end{tabular}                                                                                                                                              &                                                                                              \\ \hline
-2      & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Computación de OLS\\MaxLike\\Optimización\\ Introducción a Git y SQL\\Programación en paralelo \end{tabular}                                                                                                                                       &                                                                                              \\ \hline
-3      & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}MaxLike\\Optimización\\Modelos Bayesianos\\Web scraping: Easy, API, Bs4 \end{tabular}                                                                                                                                                              &                                                                                              \\ \hline
-4      & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Modelos Bayesianos\\Web scraping: Selenium \end{tabular}                                                                                                                                                                                           & \begin{tabular}[c]{@{}l@{}}Problem set 1: Teoría, \\ Web scraping y AWS\end{tabular}         \\ \hline
-5      & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Spatial Data\\Open Street maps api\end{tabular}                                                                                                                                                                                                    &                                                                                              \\ \hline
-6      & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Modelos espaciales\\Introducción a Machine Learning \end{tabular}                                                                                                                                                                                  &                                                                                              \\ \hline
-7      & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Sobreajuste\\Validación cruzada\\Selección de modelos \end{tabular}                                                                                                                                                                                & \begin{tabular}[c]{@{}l@{}}Problem set 2: Datos \\ espaciales\end{tabular}                   \\ \hline
-8      & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Regularización (Lasso, Ridge)\end{tabular}                                                                                                                                                                                                         &                                                                                              \\ \hline
-9      & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Regularización (Belonni)\\Modelos de clasificación \end{tabular}                                                                                                                                                                                   & \begin{tabular}[c]{@{}l@{}}Problem set 3: Predicción\\ Precios de apartamentos\end{tabular}  \\ \hline
-       & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}~Receso\end{tabular}                                                                                                                                                                                                                               &                                                                                              \\ \hline
-10     & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Modelos de clasificación\\Modelo CART\\Imbalanced learning \end{tabular}                                                                                                                                                                           & \begin{tabular}[c]{@{}l@{}}Entrega de propuesta escri\\ -ta trabajo final\end{tabular}       \\ \hline
-11     & \begin{tabular}[c]{@{}l@{}}\begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Árboles de decisión (Random Forest,\end{tabular}\\ Bagging y aplicaciones para inferencia causal)\\\\\begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Step by step \end{tabular}\end{tabular} &                                                                                              \\ \hline
-12     & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Árboles de decisión (XGboost, LightGBM)\end{tabular}                                                                                                                                                                                               & \begin{tabular}[c]{@{}l@{}}Problem set 4: Predicción\\ pobreza\end{tabular}                  \\ \hline
-13     & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Modelos de clusterización y aplicaciones a texto\\Text as Data \end{tabular}                                                                                                                                                                       &                                                                                              \\ \hline
-14     & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}PCA\\~Modelos de categorización de tópicos \end{tabular}                                                                                                                                                                                           &                                                                                              \\ \hline
-15     & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Word Embbedings\\Introducción a aprendizaje profundo\\Redes neuronales\\**Images as data \end{tabular}                                                                                                                                             &                                                                                              \\ \hline
-16     & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Presentaciones finales\end{tabular}                                                                                                                                                                                                                &                                                                                              \\ \hline
-17     & \begin{tabular}{@{\labelitemi\hspace{\dimexpr\labelsep+0.5\tabcolsep}}l@{}}Semana de finales\end{tabular}                                                                                                                                                                                                                     & 
-\\ \hline
-\end{longtable}
-
-
-
-
-
-
-
-
-1.	Introduction to ML: prediction and inference. Supervised and unsupervised learning. MCO revision. Goodness of fit. Introduction to R, Jupyter Lab, Github, and AWS
-
-2.	New Economic Observation. Search and computer-mediated behavior. Text Data: news media and social media. Large N Problems: compute and processing. Web scrapers and APIs.
-
-3.	Observing from above: Introduction to spatial econometrics. Modeling spatial dependence. Processing big spatial/satellite data, raster data.
-
-4.	Intro to non parametric econometrics. Kernels, densities, and non parametric regressions. The curse of dimensionality.
-
-5.	Classification: Bayes Risk, Logit Models, ROC analysis.
-
-6.	Non lineal methods: Clusters, PCA, K-means, Tress, Boosting and Random Forests, Support vector machines.
-
-7. Bonus Track: Machine Learning for Causal Inference and Deep Learning. 
-
-
-
-
-
-\section{Metodología}
-La metodología del curso combina clases virtuales, talleres, presentación de un paper, y un trabajo final. La participación de los estudiantes es fundamental para sacar el mayor provecho del curso. La virtualidad impone nuevos desafíos y es importante mantenerse conectados para crear las sinergias que surgen de las interacciones humanas. A su vez, los estudiantes realizarán trabajos prácticos grupales para evaluar su aprendizaje. 
-
-El producto final de este curso es un plan de trabajo con una propuesta de cómo implementar los conceptos y herramientas aprendidas a un problema concreto. 
-
-\textcolor{red}{Research, Replicate, or Deploy a product}
-
-
-\section{Competencias}
+\subsection*{Competencias}
 
 \begin{itemize}
 \item Comprender las técnicas provenientes de la ciencia de datos, la ciencia computacional, y la estadística desde una visión de economistas 
@@ -248,40 +190,105 @@ El producto final de este curso es un plan de trabajo con una propuesta de cómo
 
 \end{itemize}
 
-\section{Criterios de evaluación} \label{sec:evaluacion}
-\textcolor{red}{UPDATE}
+\section{Organización del curso}
 
-\begin{table}[]
-\begin{tabular}{llll}
+\begin{table}[H]
+\centering
+\caption{Temario y Organización (sujeto a cambios)}
+\scriptsize
+\begin{tabular}{|p{1cm}|p{8cm}|p{4cm}|}
+\hline
+Semana & Temas de clase     & Actividades    \\ \hline                                                                                                                                                                                                                                
+1      & Introducción al curso. Propiedades Numericas de OLS. FWL   & \\ \hline
+2      & Computación de OLS; Maximum Likelihood; Optimización. Git y SQL. Programación en paralelo  & Problem Set 1\\ \hline
+3      & Estadística Bayesiana.          & \\ \hline
+4      & Estadística Bayesiana.           & Problem set 2           \\ \hline
+5      & Datos y Modelos Espaciales                                  & \\ \hline
+6      & Modelos espaciales. Introducción a Machine Learning.     & \\ \hline
+7      & Sobreajuste. Validación cruzada. Selección de modelos.   & Problem set 3 \\ \hline
+8      & Regularización (Lasso, Ridge).    &                                                              \\ \hline
+9      & Regularización in Econ (Belonni). Modelos de clasificación.   & Problem set 4    \\ \hline
+       & Receso    &  \\ \hline
+10     & Modelos de clasificación. Imbalanced learning.   & Entrega de propuesta escrita trabajo final        \\ \hline
+11     & Árboles de decisión (CARTs, Random Forest, Bagging y aplicaciones para inferencia causal) & \\ \hline
+12     & Boosting: XGboost, LightGBM  & Problem set  5                  \\ \hline
+13     & Aprendizaje no Supervisado. Modelos de clusterización y aplicaciones a texto. Texto como Datos   &  \\ \hline
+14     & Reducción de dimensión: PCA, Modelos de categorización de tópicos.  & Problem set 6  \\ \hline
+15     & Word Embeddings. Introducción a aprendizaje profundo. Redes neuronales. Imagenes como datos  &   \\ \hline
+16     & Presentaciones finales  &   \\ \hline
+17     & Semana de finales  &  Entrega proyecto final  \\ 
+\hline
+\end{tabular}
+\end{table}
+
+
+
+\pagebreak
+
+
+
+
+
+
+\section{Metodología}
+La metodología del curso combina clases virtuales, talleres, y un proyecto final. La participación de los estudiantes es fundamental para sacar el mayor provecho del curso. La virtualidad impone nuevos desafíos y es importante mantenerse conectados para crear las sinergias que surgen de las interacciones humanas. A su vez, los estudiantes realizarán trabajos prácticos grupales para evaluar su aprendizaje. 
+
+El producto final de este curso es proyecto implementando los conceptos y herramientas aprendidas a un problema concreto. El proyecto puede estar orientado a la investigación o a la industria dependiendo los intereses del alumno
+
+%\textcolor{red}{Research, Replicate, or Deploy a product}
+
+
+
+
+\section{Criterios de evaluación} \label{sec:evaluacion}
+%\textcolor{red}{UPDATE}
+
+\begin{table}[H]
+\centering
+\caption{Puntajes}
+\scriptsize
+\begin{tabular}{lccc}
+\hline
+ \hline
 \multicolumn{2}{l}{}                       & Puntaje Individual & Puntaje Total \\
 \multicolumn{2}{l}{Participación}          &                    & 10\%          \\
 \multicolumn{2}{l}{Talleres}               & 10\%               & 60\%          \\
-\multicolumn{2}{l}{Propuesta de   Trabajo} &                    & 30\%          \\
+\multicolumn{2}{l}{Trabajo Final} 		   &                    & 30\%          \\
               & Primer Entrega             & 5\%                &               \\
-              & Segunda Entrega            & 5\%                &               \\
-\multicolumn{2}{l}{Examen Final}           &                    & 25\%          \\
-\multicolumn{2}{l}{Total}                  &                    & 100\%        
+              & Presentaciones             & 10\%               &               \\
+               & Entrega Final            & 15\%               &               \\
+\multicolumn{2}{l}{Total}                  &                    & 100\%        \\
+\hline
+ \hline
 \end{tabular}
 \end{table}
 
 \begin{itemize}
 
 
-\item Participación. Si bien participación es la actividad con menos peso en la composición final, será el “tiebreaker" por el cual decidiré la nota final. Participación no incluye solamente la asistencia a clases, sino también actividades fuera de clase. Una vez registrados en el curso los estudiantes recibirán invitación al canal de Slack, al aula virtual de AWS y a github. La participación será juzgada en función a la participación en las discusiones, en los trabajos grupales, de las interacciones en el canal de Slack, el aprovechamiento de AWS y se espera que estudiantes encuentren al menos un error de tipeo o cualquier otro tipo y los arreglen a través de pull requests en github.
+\item Participación. Si bien participación es la actividad con menos peso en la composición final, será el “tiebreaker" por el cual decidiré la nota final. Participación no incluye solamente la asistencia a clases, sino también actividades fuera de clase. Una vez registrados en el curso los estudiantes recibirán invitación al canal de Slack,  a GitHub, y a la nube. La participación será juzgada en función a la participación en las discusiones, en los trabajos grupales, de las interacciones en el canal de Slack, el aprovechamiento de la nube. Se espera que estudiantes encuentren al menos tres errores de tipeo o cualquier otro tipo y los arreglen a través de pull requests en GitHub.
 
-\item Talleres. Los estudiantes realizarán trabajos prácticos grupales para evaluar su aprendizaje. Los grupos no podrán superar los 3 miembros. Habrá 4 talleres durante el semestre. Se dedicarán al menos 4 clases para la discusión y presentación de los talleres. Los talleres serán submitidos vía github y parte de nota de la participación saldrá de la evaluación de la historia del repositorio donde se verá la contribución de cada estudiante.
+\item Talleres. Los estudiantes realizarán trabajos prácticos grupales para evaluar su aprendizaje. Los grupos no podrán superar los 3 miembros. Habrá 6 talleres durante el semestre. Se dedicarán al menos 6 clases para la discusión y presentación de los talleres. Los talleres serán entregados vía GitHub. Parte de nota de la participación saldrá de la evaluación de la historia del repositorio donde se verá la contribución de cada estudiante.
 
-\item Propuesta de trabajo.  La actividad estará dividida en 3 entregas. En la primera entrega los grupos se reunirán conmigo y presentarán brevemente (máximo 5 slides) la idea y como planean llevarla a cabo. En una segunda entrega donde se expondrán los datos propuestos. La entrega final será al concluir el curso que consolida todo el trabajo. Se otorgarán bonos a los estudiantes que además de presentar el plan de trabajo o propuesta, entreguen resultados concretos.
+\item Trabajo final.  La actividad estará dividida en 3 entregas. En la primera entrega los grupos entregaran una propuesta escrita donde se presenta la idea y como planean llevarla a cabo. En una segunda entrega donde se expondrán los avances y resultados. La entrega final será al concluir el curso que consolida todo el trabajo. 
 \end{itemize}
 
 
 
+
+\section{Notas definitivas, reclamos y fraude académico}
+\subsection*{Sistema de aproximación de notas definitiva}
+De acuerdo con el Artículo 51 del Reglamento General de Estudiantes de Pregrado, “Las calificaciones definitivas de las materias serán numéricas de uno cinco (1,5) a cinco (5,0), en unidades, décimas y centésimas.”
+En este curso se aproximará la nota a la centésima más cercana. Por ejemplo, si el cálculo del cómputo es 3.245, la nota final se aproximará a 3.25; si el resultado del cálculo es 2.994 la nota final será de 2.99
 
 
 \subsection*{Excusas}
 
 Los estudiantes que no presenten las actividades y evaluaciones del curso en la fecha establecida previamente recibirán una calificación de cero (0), a menos que justifiquen su ausencia ante el profesor dentro de un término no superior a ocho (8) días hábiles. Se consideran excusas válidas aquellas contempladas en el artículo 43 del Reglamento General de Estudiantes de Pregrado. Si la excusa presentada por el estudiante es válida, el profesor programará una evaluación o actividad supletoria en el transcurso de las dos semanas siguientes.
 
+\subsection*{Ausencias en días de trabajo en grupo (clase tipo X)}
+
+La asistencia a clase en los días donde hay trabajo en grupo es obligatoria. Si el estudiante se ausenta deberá presentar una excusa válida. Si no presenta una excusa válida su nota en la evaluación Tipo X se verá reducida. En particular su nota $\theta$ (ver página 5) de la actividad correspondiente al día de su ausencia se reducirá en 20 puntos por cada día de ausencia. Ver la sección anterior, “Excusas”, para la definición de excusa válida.
 
 \subsection*{Reclamos}
 
@@ -294,19 +301,18 @@ Este curso se acoge a la reglamentación sobre faltas académicas y disciplinari
 El fraude se considera como una de las faltas más graves que se puedan cometer en la Academia. En una comunidad académica la discusión respetuosa e informada de las ideas propias y ajenas constituye la columna vertebral de su quehacer diario. No dar crédito a otros por sus ideas publicadas o no, o apropiarse de las ideas de otros, sean estos autores, profesores o compañeros, atenta directamente contra la esencia de la Academia. En consecuencia, en este curso, el fraude en cualquiera de sus formas, es considerado como una acción inaceptable.
 
 
-\section{Sistema de aproximación de notas definitiva}
-De acuerdo con el Artículo 51 del Reglamento General de Estudiantes de Pregrado, “Las calificaciones definitivas de las materias serán numéricas de uno cinco (1,5) a cinco (5,0), en unidades, décimas y centésimas.”
-En este curso se aproximará la nota a la centésima más cercana. Por ejemplo, si el cálculo del cómputo es 3.245, la nota final se aproximará a 3.25; si el resultado del cálculo es 2.994 la nota final será de 2.99
 
 \section{Fechas Importantes}
-\textcolor{red}{COMPLETAR cuando sepamos las fechas}
+
 \begin{itemize}
-\item Inicio de clases: XXX
-\item Semana de receso: XXX
-\item  Fecha de entrega del 30\% de las notas en MiBanner: XXX
-\item Último día de clases: XXX
-\item Último día para subir notas finales en MiBanner: XXX
-\item Último día para solicitar retiros: XXX
+\item Inicio de clases: 9 de agosto.
+\item Semana de receso: 4-9 de octubre.  
+\item Fecha de entrega del 30\% de las notas en MiBanner: 15 de Octubre.
+\item Último día de clases: 4 de diciembre.
+\item Exámenes finales (solo para cursos con varias secciones y exámenes conjuntos): 6-11 de diciembre.
+\item Último día para solicitar retiros: 17 de diciembre 6 p.m.
+\item Último día para subir notas finales en MiBanner: 16 de diciembre. 
+
 
 \end{itemize}
 
@@ -331,36 +337,69 @@ Todas las personas pueden pasar por un momento difícil que de alguna manera pue
 
 \section{Bibliografía (sujeta a cambios)}
 \begin{itemize}
-\item Anselin, Luc. 2003. “An Introduction to Spatial Regression Analysis in R.” Available at: Https://geodacenter.asu.edu/drupalfiles/spdepintro.pdf.
-Anselin, Luc, and Anil K Bera. 1998. “Spatial Dependence in Linear Regression Models with an Introduction to Spatial Econometrics.” Statistics Textbooks and Monographs 155. MARCEL DEKKER AG: - 237–90.
-\item Arbia, Giuseppe. 2014. A Primer for Spatial Econometrics: With Applications in R. Palgrave Macmillan.
-\item Belloni, Alexandre, Victor Chernozhukov, and Christian Hansen. High-dimensional methods and inference on structural and treatment effects. The Journal of Economic Perspectives 28.2 (2014): - 29-50.
-\item Bivand, Roger S, Edzer J Pebesma, and Virgilio Gomez-Rubio. 2008. Applied Spatial Data Analysis with R. Springer. Springer.
-\item Boehmke, B., \& Greenwell, B. M. (2019). Hands-on machine learning with R. CRC Press.
-Cárdenas Rubio, J. A., Chaux Guzmán, F. J., \& Otero, J. (2019). Una base de datos de precios y características de vivienda en Colombia con información de Internet. Revista de Economía del - Rosario, 22(1), 25.
+\item Albouy, D., Christensen, P., \& Sarmiento-Barbieri, I. (2020). Unlocking amenities: Estimating public good complementarity. Journal of Public Economics, 182, 104110.
+\item Anselin, L. (1982). A note on small sample properties of estimators in a first-order spatial autoregressive model. Environment and Planning A, 14(8), 1023-1030.
+\item Anselin, Luc, \& Anil K Bera. 1998. “Spatial Dependence in Linear Regression Models with an Introduction to Spatial Econometrics.” Statistics Textbooks and Monographs 155. MARCEL DEKKER AG: 237–90.
+\item Arbia, G. (2014). A primer for spatial econometrics with applications in R. Palgrave Macmillan.
+\item Ash, E., Chen, D. L., \& Ornaghi, A. (2020). Stereotypes in High-Stakes Decisions: Evidence from US Circuit Courts (No. 1256). University of Warwick, Department of Economics.
+\item Aston Zhang, Zachary C. Lipton, Mu Li, and Alexander J. Smola (2020) Dive into Deep Learning. Release 0.15.1.
+\item Athey, S., \& Imbens, G. (2016). Recursive partitioning for heterogeneous causal effects. Proceedings of the National Academy of Sciences, 113(27), 7353-7360.
+\item Athey, S., \& Imbens, G. W. (2019). Machine learning methods that economists should know about. Annual Review of Economics, 11, 685-725.
+\item Belloni, A., Chernozhukov, V., \& Hansen, C. (2014). High-dimensional methods and inference on structural and treatment effects. Journal of Economic Perspectives, 28(2), 29-50.
+\item Belloni, A., Chernozhukov, V., \& Hansen, C. (2014). Inference on treatment effects after selection among high-dimensional controls. The Review of Economic Studies, 81(2), 608-650.
+\item Bivand, R. S.,  \& Pebesma, E. J. (2020). Spatial Data Science (Chapter 8)
+\item Bivand, R. S., Gómez-Rubio, V., \& Pebesma, E. J. (2008). Applied spatial data analysis with R (Vol. 747248717, pp. 237-268). New York: Springer.
+\item Blei, D. M., Ng, A. Y., \& Jordan, M. I. (2003). Latent dirichlet allocation. Journal of machine Learning research, 3(Jan), 993-1022.
+\item Blumenstock, J., Cadamuro, G., \& On, R. (2015). Predicting poverty and wealth from mobile phone metadata. Science, 350(6264), 1073-1076.
+\item Bolukbasi, T., Chang, K. W., Zou, J. Y., Saligrama, V., \& Kalai, A. T. (2016). Man is to computer programmer as woman is to homemaker? debiasing word embeddings. In Advances in neural information processing systems (pp. 4349-4357).
+\item Breiman, L. (2001). “Random Forests”. In: Machine Learning. ISSN: 1098-6596. DOI: 10.1017/CBO9781107415324.004. eprint: arXiv:1011.1669v3.
+\item Carneiro, A., Guimarães, P., \& Portugal, P. (2012). Real Wages and the Business Cycle: Accounting for Worker, Firm, and Job Title Heterogeneity. American Economic Journal: Macroeconomics, 4 (2): 133-52.
+\item Casella, G. (1985). An introduction to empirical Bayes data analysis. The American Statistician, 39(2), 83-87.
 \item Casella, G., \& Berger, R. L. (2002). Statistical inference (Vol. 2, pp. 337-472). Pacific Grove, CA: Duxbury.
+\item Charpentier, Arthur (2018). Classification from scratch, boosting.
+\item Chen, T., \& Guestrin, C. (2016, August). Xgboost: A scalable tree boosting system. In Proceedings of the 22nd acm sigkdd international conference on knowledge discovery and data mining (pp. 785-794).
+\item Chen, T., He, T., \& Benesty, M. (2018). XGBoost Documentation.
+\item Chernozhukov, V.,  Hansen, C., \& Spindler, M (2016). hdm: High-Dimensional Metrics R Journal, 8(2), 185-199.
+\item Chetty, R., \& Hendren, N. (2018). The impacts of neighborhoods on intergenerational mobility II: County-level estimates. The Quarterly Journal of Economics, 133(3), 1163-1228.
+\item Christensen, P.,  Sarmiento-Barbieri, I., Timmins C. (2020). Housing Discrimination and the Pollution Exposure Gap in the United States. NBER WP No. 26805
+\item Clark, M (2018). An Introduction to Text Processing and Analysis with R.Rstudio (2020). Tutorial TensorFlow
+\item Constantine, P. G., \& Gleich, D. F. (2011, June). Tall and skinny QR factorizations in MapReduce architectures. In Proceedings of the second international workshop on MapReduce and its applications (pp. 43-50).
 \item Davidson, R., \& MacKinnon, J. G. (2004). Econometric theory and methods (Vol. 5). New York: Oxford University Press.
-\item Einav, Liran, and Jonathan D. Levin. The data revolution and economic analysis. No. w19035. National Bureau of Economic Research, 2013.
+\item Dean, J., \& Ghemawat, S. (2004). MapReduce: Simplified data processing on large clusters.
 \item Efron, B., \& Hastie, T. (2016). Computer age statistical inference (Vol. 5). Cambridge University Press.
-\item Farrell, D., Greig, F., and Deadman, E. (2020). Estimating family income from administrative banking data: A machine learning approach. AEA Papers and Proceedings, 110:36-41.
-\item Gentzkow, Matthew, and Jesse M. Shapiro. What drives media slant? Evidence from US daily newspapers. Econometrica 78.1 (2010): 35-71.
-\item Gentzkow, M., and J. Shapiro. Nuts and Bolts: Computing with Large Data. NBER Lecture and Videos.
-\item Glaeser, E.L., Hillis, A., Kominers, S.D. and Luca, M., 2016. Predictive Cities Crowdsourcing City Government: Using Tournaments to Improve Inspection Accuracy. The American Economic - Review, 106(5), pp.114-118.
-\item Glaeser, E. L., Kominers, S. D., Luca, M., and Naik, N. (2018). Big data and big cities: The promises and limitations of improved measures of urban life. Economic Inquiry, 56(1):114-137.
-\item Hastie, T., Tibshirani, R., and Friedman, J. (2009). The elements of statistical learning: data mining, inference, and prediction. Springer Science \& Business Media.
-\item Hastie, T., Tibshirani, R., and Wainwright, M. (2015). Statistical learning with sparsity: the lasso and generalizations. CRC press.
+\item Einav, Liran, and Jonathan D. Levin. The data revolution and economic analysis. No. w19035. National Bureau of Economic Research, 2013.
+\item Friedman, J., Hastie, T., \& Tibshirani, R. (2001). The elements of statistical learning (Vol. 1, No. 10). New York: Springer series in statistics.
+\item Gentzkow, M., \& Shapiro, J. M. (2010). What drives media slant? Evidence from US daily newspapers. Econometrica, 78(1), 35-71.
+\item Goodfellow, I., Bengio, Y., Courville, A., \& Bengio, Y. (2016). Deep learning (Vol. 1, No. 2). Cambridge: MIT press.
+\item Green, D. P., \& Kern, H. L. (2012). Modeling heterogeneous treatment effects in survey experiments with Bayesian additive regression trees. Public opinion quarterly, 76(3), 491-511.
+\item Greene, W. H. (2003). Econometric analysis fifth edition. New Yersey: Prentice Hall.
+\item Gu, J., \& Koenker, R. (2017). Empirical Bayesball remixed: Empirical Bayes methods for longitudinal data. Journal of Applied Econometrics, 32(3), 575-599.
 \item Hayashi, F. (2000). Econometrics. 2000. Princeton University Press. Section, 1, 60-69.
-\item Kuhn, M. (2012). The caret package. R Foundation for Statistical Computing, Vienna, Austria. URL https://cran. r-project. org/package= caret.
-\item James, G., Witten, D., Hastie, T., and Tibshirani, R. (2013). An introduction to statistical learning, volume 112. Springer.
-Mullainathan, S. and Spiess, J., 2017. Machine learning: an applied econometric approach. Journal of Economic Perspectives, 31(2), pp.87-106.
+\item James, G., Witten, D., Hastie, T., \& Tibshirani, R. (2013). An introduction to statistical learning (Vol. 112, p. 18). New York: springer.
+\item Kasy M. (2019). Trees, forests, and causal trees. Mimeo.
+\item Koenker, R. (2013) Economics 508: Lecture 4. Model Selection and Fishing for Significance. Mimeo
+\item Kohavi, R. (1995). A study of cross-validation and bootstrap for accuracy estimation and model selection. In Ijcai (Vol. 14, No. 2, pp. 1137-1145).
+\item Kuhn, M. (2012). The caret package. R Foundation for Statistical Computing, Vienna, Austria.
+\item Lee, K., \& Braithwaite, J. (2020). High-Resolution Poverty Maps in Sub-Saharan Africa. arXiv preprint arXiv:2009.00544.
+\item Leo Breiman. Statistical modeling: The two cultures (with comments and a rejoinder by the author). Statistical Science, 16(3):199–231, 2001b.
+\item Lovelace, R., Nowosad, J., \& Muenchow, J. (2019). Geocomputation with R. CRC Press. (Chapters 2 \& 6)
+\item Lundberg, I (2017). Causal forests. A tutorial in high dimensional causal inference. Mimeo
+\item McMillen, D., Sarmiento-Barbieri, I., \& Singh, R. (2019). Do more eyes on the street reduce Crime? Evidence from Chicagos safe passage program. Journal of urban economics, 110, 1-25.
+\item Mullainathan, S. and Spiess, J., 2017. Machine learning: an applied econometric approach. Journal of Economic Perspectives, 31(2), pp.87-106.
 \item Murphy, K. P. (2012). Machine learning: a probabilistic perspective. MIT press.
-\item Sosa Escudero, W. (2019). Big Data. Siglo Veintiuno Editores.
-Temperature and Temperament: Evidence from a Billion Tweets.
-\item Patrick Baylis. Job Market Paper. 2015.
-\item Varian, H.R., 2010. Computer Mediated Transactions. The \item American Economic Review, 100(2), pp.1-10.
+\item Robinson, D. (2017). Introduction to Empirical Bayes: Examples from Baseball Statistics. 2017.
+\item Rstudio (2020). Tutorial TensorFlow
+\item Ruud, P. A. (2000). An introduction to classical econometric theory. OUP Catalogue
+\item Sarmiento-Barbieri, I. (2016). An Introduction to Spatial Econometrics in R.
+\item Sosa Escudero, W. (2019). Big Data. Siglo Veintiuno Editores
+\item Taddy, M. (2019). Business data science: Combining machine learning and economics to optimize, automate, and accelerate business decisions. McGraw Hill Professional.
+\item Tobler, WR. 1979. “Cellular Geography.” In Philosophy in Geography, 379–86. Springer.
+\item Van Loan, C. F., Golub, G. H. (2012). Matrix Computations. United States: Johns Hopkins University Press.
 \item Varian, Hal R. Big Data: New Tricks for Econometrics. Journal of Economic Perspectives 28, no. 2 (2014): 3-28.
-What will the Impact of Machine Learning be on Economics? Forbes Magazine http://www.forbes.com/sites/quora/2016/01/27/what-will-the-impact-of-machine-learning-be-on-economic\#\# 14906ea67ad5l.
-\item Wooldridge, J. M. (2010). Econometric analysis of cross section and panel data. MIT press.
+\item Voigt, R., Camp, N. P., Prabhakaran, V., Hamilton, W. L., Hetey, R. C., Griffiths, C. M., ... \& Eberhardt, J. L. (2017). Language from police body camera footage shows racial disparities in officer respect. Proceedings of the National Academy of Sciences, 114(25), 6521-6526.
+\item Wasser, L. GIS With R: Projected vs Geographic Coordinate Reference Systems Last Access September 10, 2020
+\item Zou, H. \& Hastie, T. (2005). Regularization and variable selection via the elastic net. Journal of the Royal StatisticalSociety, Series B.67: pp. 301–320
+
 
 \end{itemize}
 
